--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ PORT=3000
 DATABASE_URL=""
 OLLAMA_BASE_URL="http://localhost:11434"
 OLLAMA_MODEL="llama3.1"
+GRID_BASE_URL="https://api.grid.gg/graphql"
+GRID_API_KEY="YOUR_GRID_API_KEY"
