--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "dotenv": "^17.2.3",
+    "graphql": "^16.12.0",
+    "graphql-request": "^7.4.0",
     "pg": "^8.17.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
